force-app/main/default/objects/Inbound_Integration_Router__mdt/Inbound_Integration_Router__mdt.object-meta.xml
<CustomObject>
    <label>Inbound Integration Router</label>
    <pluralLabel>Inbound Integration Routers</pluralLabel>
</CustomObject>