force-app/main/default/objects/Inbound_Integration_Router__mdt/fields/Custom_API__c.field-meta.xml
<CustomField>
    <fullName>Custom_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom API</label>
    <type>Checkbox</type>
</CustomField>