force-app/main/default/objects/Inbound_Integration_Router__mdt/fields/Incoming_Path__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Path__c</fullName>
    <label>Incoming Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>