force-app/main/default/objects/Inbound_Integration_Router__mdt/fields/Logging_enabled__c.field-meta.xml
<CustomField>
    <fullName>Logging_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logging enabled</label>
    <type>Checkbox</type>
</CustomField>