force-app/main/default/objects/Inbound_Integration_Router__mdt/fields/Redirected_To__c.field-meta.xml
<CustomField>
    <fullName>Redirected_To__c</fullName>
    <label>Redirected To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>